<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_ignored_characters"
        android:layout_width="@dimen/size_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_50_dp"
        android:layout_marginStart="@dimen/size_10_dp"
        android:layout_marginEnd="@dimen/size_10_dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_enter_ignored_characters"
        android:inputType="text"
        android:text=""
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_text_string_for_reverse"/>

    <EditText
        android:id="@+id/edit_text_string_for_reverse"
        android:layout_width="@dimen/size_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10_dp"
        android:layout_marginTop="@dimen/size_50_dp"
        android:layout_marginEnd="@dimen/size_10_dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_enter_your_string"
        android:inputType="text"
        android:text=""
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_ignored_characters" />

    <TextView
        android:id="@+id/text_view_reversed_text"
        android:layout_width="@dimen/size_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10_dp"
        android:layout_marginTop="@dimen/size_50_dp"
        android:layout_marginEnd="@dimen/size_10_dp"
        android:textSize="@dimen/size_18_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_string_for_reverse" />
</androidx.constraintlayout.widget.ConstraintLayout>